<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GM" Id="{b99e3b33-2868-495c-96c0-4b86339a31af}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	
	// Simulated bit value.
	bBit : BOOL;
	// Simulated integer value.
	nInteger : INT;
	// Simulated real value.
	fReal : REAL;
	
	// Target string variable to test writing strings.
	sTarget : T_MaxString;
	
	// A string that will echo the value of sTarget to test reading back strings.
	sEcho : T_MaxString;
	
	// Test notifications and parsing a structure. Updated every 1s.
	stTestStruct : S_TestStruct;
	
	// Test notifications and parsing an array . Updated every 1s.
	aTestArray : ARRAY [ 0 .. 9 ] OF REAL;
	
	// Test notifications and parsing an array of structure. Updated every 1s.
	aStructArray : ARRAY [ 0 .. 9 ] OF S_TestStruct;


	// This variable is used as a target to test writing an INT
	// from the client.	
	nIntWriteTarget : REAL;
	
	// This variable is used as a target to test writing a REAL
	// from the client.	
	fRealWriteTarget : REAL;
	
	// This variable is used as a target to test writing a simple bool
	// from the client.
	bBoolTarget : BOOL;
	
	// This variable is used as a target to test writing a structure
	// from the client.
	stStructWriteTarget : S_TestStruct;
	

	// This variable is used as a target to test writing an array
	// from the client.
	aArrayWriteTarget : ARRAY [ 0 .. 9 ] OF REAL;

	// This variable is used as a target to test writing an array of
	// structure from the client.
	aStructArrayWriteTarget : ARRAY [ 0 .. 9 ] OF S_TestStruct;
	
	
	// This variable is used as a target to test writing an array
	// from the client.
	aArrayJsonWriteTarget : ARRAY [ 0 .. 9 ] OF REAL;
	
	// This variable is used as a target to test writing a structure
	// from the client.
	stStructJsonWriteTarget : S_TestStruct;
	
	
	// This variable is used as a target to test writing an array of
	// structure from the client.
	aStructArrayJsonWriteTarget : ARRAY [ 0 .. 9 ] OF S_TestStruct;	
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>