<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="MAIN" Id="{19260aee-bb79-4f88-9956-1a49929288e6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR
	// Alternates between TRUE and FALSE on a 1 second tick.
	bBlink : BOOL;
	// Timer for the blink variable.
	tonBlink : TON;
	
	nArrayIndex : INT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
tonBlink(IN:=TRUE, PT:=T#1S);
IF tonBlink.Q THEN
	
	bBlink := NOT bBlink;
	
	GM.bBit := NOT GM.bBit;
	GM.nInteger := GM.nInteger + 1;	
	GM.fReal := LREAL_TO_REAL(SIN(GM.nInteger) * 10);
	GM.sEcho := GM.sTarget;
	
	tonBlink(IN:=FALSE);
	
	
	GM.stTestStruct.bBit := NOT GM.bBit;
	GM.stTestStruct.nInt := 16000 - GM.nInteger;
	GM.stTestStruct.fReal := COS(GM.fReal) * 100;
	
	nArrayIndex := GM.nInteger MOD 10;
	GM.aTestArray[nArrayIndex] := TAN(GM.fReal);
	
END_IF]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="10" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="26" Count="1" />
      <LineId Id="14" Count="0" />
      <LineId Id="37" Count="6" />
      <LineId Id="46" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="13" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>